--- a/page/templates/page/splash-page.html
+++ b/page/templates/page/splash-page.html
@@ -168,7 +168,7 @@
       <br>
       <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+        <h4 class="m-0 text-center text-white">"What enables the wise ... [to] achieve things beyond the reach of ordinary men is FOREKNOWLEDGE." - <a href="https://en.wikipedia.org/wiki/The_Art_of_War">Sun Tzu</a></h4>
       </div>
       <!-- /.container -->
       </footer>
