--- a/page/templates/page/interview_edit.html
+++ b/page/templates/page/interview_edit.html
@@ -8,7 +8,7 @@
 	    <div class="row">
 	    	<div class="col-sm-12">
 			    <center>
-			    	<h1><u>New Review!</u></h1>
+			    	<h1><u>New Interview!</u></h1>
 			    </center>
 			</div>
 		</div>
@@ -21,7 +21,15 @@
 			    	<h2>Hi {{user.username}},</h2>
 			    </center>
 			    <br>	 
-			   	<p>BLAH BLAH BLAH interview ettiquete etc.<br></p>
+			   	<p>Thanks for writing about your interview for {{club.name}}! A couple of things to keep in mind: the goal of Princeton Club Talk is to help students make more informed choices about extracurricular clubs. We ask that you be honest in your review but also civil and constructive. This means no profanity and rude or hostile language. <b>Any reviews that violate this rule will be deleted, and repeat offenders can have their account suspended.</b> 
+			   	<br>
+			   	<br>
+			   	In addition, please don't write about any interview rounds that are still going on. Doing so could give an unfair advantage to someone who hasn't reviewed yet.
+			   	<br>
+			   	<br>
+			   	Happy reviewing!
+			   	</p>
+			   	<br>
 				</div>
 			</div>
 		</div>
