--- a/page/templates/page/post_list_full.html
+++ b/page/templates/page/post_list_full.html
@@ -59,7 +59,7 @@
             <p>
               <a class="btn btn-primary btn-lg" href="{% url 'post_detail' pk=club.pk %}">Club Page</a>&nbsp;&nbsp;
               <a class="btn btn-primary btn-lg" href="{% url 'all_reviews' pk=club.pk %}">Reviews</a>&nbsp;&nbsp;
-              <a class="btn btn-primary btn-lg" href="{% url 'all_reviews' pk=club.pk %}">Interviews</a>
+              <a class="btn btn-primary btn-lg" href="{% url 'all_interviews' pk=club.pk %}">Interviews</a>
             </p>
           </div>
           <div class="col-sm-4">
