--- a/page/templates/page/all_reviews.html
+++ b/page/templates/page/all_reviews.html
@@ -36,6 +36,19 @@
               <br>
               <center>
               <a class="btn btn-primary btn-lg" href="{% url 'post_new' pk=club.pk %}">Add a review!</a>
+              <form method="get">
+                  <b>Sort Reviews By:</b> <br>
+                  {% if time == 2 %}
+                  <select id="sort" name="sort" onchange="this.form.submit()">
+                      <option value="1">Review Date</option>
+                      <option selected="selected" value="2">Review Rating</option>
+                  </select>
+                  {% else %}
+                  <select id="sort" name="sort" onchange="this.form.submit()">
+                      <option selected="selected" value="1">Review Date</option>
+                      <option value="2">Review Rating</option>
+                  </select>
+                  {% endif %}
               </center>
             </p>
           </div>
