cannot access until reviewed

--- a/page/templates/page/all_interviews.html
+++ b/page/templates/page/all_interviews.html
@@ -34,7 +34,7 @@
             </center>
               <br>
               <center>
-              <a class="btn btn-primary btn-lg" href="{% url 'interview_new' pk=club.pk %}">Add an interview!</a>
+              <a class="btn btn-primary btn-lg" href="{% url 'interview_new' pk=club.pk %}">Add a comment about your interview experience!</a>
               </center>
             </p>
           </div>
@@ -114,7 +114,7 @@
                 <h3>Dissatisfied?</h3>
                 <h3>Tell us why!</h3>
                 <br>
-                <a class="btn btn-primary btn-lg" href="{% url 'interview_new' pk=club.pk %}">Add an interview!</a>
+                <a class="btn btn-primary btn-lg" href="{% url 'interview_new' pk=club.pk %}">Add an comment!</a>
               </div>
 
             </center>
