--- a/page/templates/page/interview_edit.html
+++ b/page/templates/page/interview_edit.html
@@ -8,7 +8,7 @@
 	    <div class="row">
 	    	<div class="col-sm-12">
 			    <center>
-			    	<h1><u>New Interview!</u></h1>
+			    	<h1><u>New Interview Comment!</u></h1>
 			    </center>
 			</div>
 		</div>
@@ -39,7 +39,7 @@
 					<p>Was your interview for {{club.name}} a positive or negative experience?</p>
 					<center>{{form.positive}}</center>
 					<br>
-					<p>Was your interview for {{club.name}} easy or difficult?</p>
+					<p>Was your interview for {{club.name}} easy or hard?</p>
 					<center>{{form.hard}}</center>
 				</div>
 
