fixed some front end

--- a/page/templates/page/post_detail2.html
+++ b/page/templates/page/post_detail2.html
@@ -388,7 +388,7 @@
 
                 {% if interview1 == None and interview2 == None %}
                   <center>
-                    <h5>No one has reviewed this club's interview process. Add one above!</h5>
+                    <h5>No one has reviewed this club's interview process. Add a comment above!</h5>
                   </center>
                 {% endif %}
 
