--- a/page/templates/page/all_reviews.html
+++ b/page/templates/page/all_reviews.html
@@ -9,7 +9,7 @@
 
           <div class="jumbotron">
             <center>
-            <h1 class="mt-4">{{club.name}}</h1>
+            <h1 class="mt-4"><a href="{% url 'post_detail' pk=club.pk %}">{{club.name}}</a></h1>
 
             <h2>
               {% if club.total_stars %}
