--- a/page/templates/page/all_interviews.html
+++ b/page/templates/page/all_interviews.html
@@ -34,7 +34,7 @@
             </center>
               <br>
               <center>
-              <a class="btn btn-primary btn-lg" href="{% url 'interview_new' pk=club.pk %}">Add a comment about your interview experience!</a>
+              <a class="btn btn-primary btn-lg" href="{% url 'interview_new' pk=club.pk %}">Submit your interview experience!</a>
               </center>
             </p>
           </div>
