--- a/page/templates/page/post_detail2.html
+++ b/page/templates/page/post_detail2.html
@@ -91,7 +91,7 @@
             <p>{{club.desc}}</p>
             <p>
               <a class="btn btn-primary btn-lg" href="{% url 'all_reviews' pk=club.pk %}">Check out our reviews!</a>
-              <a class="btn btn-primary btn-lg" href="{% url 'all_interviews' pk=club.pk %}">Check out comments about our interview process!</a>
+              <a class="btn btn-primary btn-lg" href="{% url 'all_interviews' pk=club.pk %}">Read about our interview process!</a>
             </p>
           </div>
           <div class="col-sm-4">
@@ -292,7 +292,7 @@
               <h4 class="card-title">
                 <center>Interview Comments</center></h4>
                 <center>
-                  <a href="{% url 'interview_new' pk=club.pk %}" class="btn btn-primary btn-md">Tell us about your interview experience!</a>
+                  <a href="{% url 'interview_new' pk=club.pk %}" class="btn btn-primary btn-md">Submit interview experience!</a>
                   &nbsp;
                   <a href="{% url 'all_interviews' pk=club.pk %}" class="btn btn-primary btn-md">See all comments</a>
                 </center>
@@ -426,13 +426,6 @@
     </div>
     <!-- /.container -->
 
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
-      </div>
-      <!-- /.container -->
-    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
