--- a/page/templates/page/splash-page.html
+++ b/page/templates/page/splash-page.html
@@ -76,6 +76,15 @@
                     <li class="nav-item active">
                       <a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">Help!</a>
                     </li>
+                    {% if request.user.is_authenticated %}
+                    <li class="nav-item active">
+                      <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item active">
+                      <a class="nav-link" href="/login/?next={{request.path}}">Login</a>
+                    </li>
+                    {% endif %}
                   </ul>
               </div>
             </div>
