--- a/page/templates/page/post_detail2.html
+++ b/page/templates/page/post_detail2.html
@@ -392,20 +392,21 @@
         </div>
 
       </div>
-
       <br>
-      <div class="jumbotron">
-        <div class="row">
-          <div class="col-sm-12 my-12">
-            <center><h2><u>Are you a leader of {{club.name}}?</u></h2>
-            <br>
-            <h2>Edit your club's information <a href="{% url 'edit_page' pk=club.pk %}" class="btn btn-primary"><h3>here!</h2></h3></a>
-            <br>
-            <center><h2>See who is interested in your club <a href="{% url 'interest_page' pk=club.pk %}" class="btn btn-primary"><h3>here!</h3></a>
-            </h2></center>
+      {% if accept %}
+        <div class="jumbotron">
+          <div class="row">
+            <div class="col-sm-12 my-12">
+              <center><h2><u>You are a leader of {{club.name}}!</u></h2>
+              <br>
+              <h2>Edit your club's information <a href="{% url 'edit_page' pk=club.pk %}" class="btn btn-primary"><h3>here!</h2></h3></a>
+              <br>
+              <center><h2>See who is interested in your club <a href="{% url 'interest_page' pk=club.pk %}" class="btn btn-primary"><h3>here!</h3></a>
+              </h2></center>
+            </div>
           </div>
         </div>
-      </div>
+      {% endif %}
     </div>
     <!-- /.container -->
 
