--- a/page/templates/page/all_interviews.html
+++ b/page/templates/page/all_interviews.html
@@ -3,6 +3,13 @@
 {% load templatetags %}
 {% block content %}
 
+    {% if messages %}
+      <script>
+        {% for message in messages %}
+          alert("{{ message }}");
+        {% endfor %}
+      </script>
+    {% endif %}
     <br>
       <div class="row">
         <!-- Right bar -->
