--- a/page/templates/page/my_clubs.html
+++ b/page/templates/page/my_clubs.html
@@ -7,84 +7,78 @@
     <div class="container"> 
     <div class="top1">
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-sm-6">
             <center>
               <h1><u>My Clubs</u></h1>
               {% if clubs %}
-              <p>Below is a list of the that clubs that you are a leader of. Feel free to edit your club's page!</p>
               {% else %}
-              <br>
               <p>You are not the leader of any clubs. If you want to have access to a club ask one of your leaders to include you as a leader. Feel free to explore other clubs on the site!</p>
               {% endif %}
+            </center>
+            <br>
+
+            {% if count %}
+            {% for club in clubs %} 
+            <div class="jumbotron">
+                <h2><a href="{% url 'post_detail' pk=club.pk %}">{{club.name}}</a>
+                  {% if club.total_stars %}
+                    &nbsp; &nbsp;{{club.total_stars|floatformat:"-1"}} <a data-toggle="tooltip" data-placement="top" title="Average ranking for {{club.name}}"><i class="fas fa-star"></a></i>  
+                  {% endif %}
+                  &nbsp;&nbsp;<a data-toggle="tooltip" data-placement="top" title="Edit your club's page!" href="{% url 'edit_page' pk=club.pk %}" class="btn btn-warning btn-md">
+                    <i class="fas fa-plus-circle"></i>
+                  </a>
+                  <a data-toggle="tooltip" data-placement="top" title="See who is interested in your club!" href="{% url 'interest_page' pk=club.pk %}" class="btn btn-warning btn-md">
+                    <i class="fas fa-users"></i>
+                  </a>
+                </h2>
+                <br>
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                  <div class="btn-group mr-2" role="group" aria-label="First group">
+                    <a class="btn btn-primary btn-lg btn-block" href="{% url 'all_reviews' pk=club.pk %}">Reviews</a>
+                  </div>
+                  <div class="btn-group mr-2" role="group" aria-label="Second group">
+                    <a class="btn btn-primary btn-lg btn-block" href="{% url 'all_interviews' pk=club.pk %}">Interviews</a>
+                  </div>
+                </div>
+                
+            </div>
+            {% endfor %}
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+          </div>
+              {% else %}
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+              {% endif %}
+          <div class="col-sm-6">
+            <center>
+              <h1><u>Clubs of Interest</u></h1>
+              {% for club in clubs_interested %}
+
+
+              {% endfor %}
             </center>
           </div>
         </div>
       </div>
-      <br>
-      {% if count %}
-        {% for club in clubs %} 
-        <div class="body1">
-          <div class="jumbotron">
-          <div class="row">
-            <div class="col-sm-8">
-              <h2 class="mt-4"><a href="{% url 'post_detail' pk=club.pk %}">{{club.name}}</a>
-                {% if club.total_stars %}
-                  &nbsp; &nbsp;{{club.total_stars|floatformat:"-1"}} <a data-toggle="tooltip" data-placement="top" title="Average ranking for {{club.name}}"><i class="fas fa-star"></a></i>  
-                {% endif %}
-              </h2>
-              <p>{{club.desc}}</p>
-              <p>
-                <a class="btn btn-primary btn-lg" href="{% url 'post_detail' pk=club.pk %}">Club Page</a>&nbsp;&nbsp;
-                <a class="btn btn-primary btn-lg" href="{% url 'all_reviews' pk=club.pk %}">Reviews</a>&nbsp;&nbsp;
-                <a class="btn btn-primary btn-lg" href="{% url 'all_reviews' pk=club.pk %}">Interviews</a>
-              </p>
-              <p>
-                <a class="btn btn-primary btn-lg" href="{% url 'edit_page' pk=club.pk %}">Edit my club!</a>
-                <a class="btn btn-primary btn-lg" href="{% url 'interest_page' pk=club.pk %}">See who is interested in my club!</a>
-              </p>
-            </div>
-            <div class="col-sm-4">
-              <address>
-                <br>
-                <strong>Involved Students</strong>
-                <i class="fas fa-user"></i>
-                {% for leader in club.leader_set.all %}
-                  <br>{{leader.title}}: <a href="{{leader.email|mail}}">{{leader.name}}</a>
-                {% endfor %}
-                <br>
-                <br>
-                {% if club.category.all %}
-                  <strong>Categories <a data-toggle="tooltip" data-placement="top" title="These are all the ODUS-listed club categories that {{club.name}} fell into."><i class="fas fa-align-justify"></i></a></strong>
-                    <br>{{ club.category.all|join:", " }}<br>
-                {% endif %}
-              </address>
-            </div>
-          </div>
-          </div>
-        </div>
-
-
-      {% endfor %}
-
-    {% else %}
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-    {% endif %}
-
     </div>
 
 {% endblock %}
