--- a/page/templates/page/my_clubs.html
+++ b/page/templates/page/my_clubs.html
@@ -3,6 +3,14 @@
 {% load templatetags %}
 {% block content %}
 
+    {% if messages %}
+      <script>
+        {% for message in messages %}
+          alert("{{ message }}");
+        {% endfor %}
+      </script>
+    {% endif %}
+
     <br>
     <div class="container"> 
     <div class="top1">
