WE ARE STILL TIGER TALK

--- a/page/templates/page/top20.html
+++ b/page/templates/page/top20.html
@@ -11,7 +11,7 @@
           <div class="col-sm-12">
             <center>
               <h1><i class="fas fa-chess-queen"></i> <u>The Top 20</u> <i class="fas fa-chess-queen"></i></h1>
-              <p>Below are the 20 highest ranked clubs on Princeton Club Talk. The list has been compiled by comparing the average star-ranking for each club and the average number of reviews. The below list does not reflect the opinion of Princeton Tiger Talk and is solely based on user input.</p>
+              <p>Below are the 20 highest ranked clubs on Princeton Club Talk. The list has been compiled by comparing the average star-ranking for each club and the average number of reviews. The below list does not reflect the opinion of Princeton Club Talk and is solely based on user input.</p>
             </center>
           </div>
         </div>
