Boxes added to homepage

--- a/page/templates/page/baseB.html
+++ b/page/templates/page/baseB.html
@@ -30,7 +30,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <center>
-                <h5 class="modal-title" id="exampleModalLabel">Confused where to start?</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Help!</h5>
               </center>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -40,12 +40,12 @@
               
               <ul class="list-group list-group-flush">
                 <li class="list-group-item"></li>
-                <li class="list-group-item"><center><h4>Find a club</h4></center></li>
-                <li class="list-group-item">Use the search bar below to find any of Princeton's 300+ clubs!</li>
-                <li class="list-group-item"><center><h4>Not sure what you're looking for?<h4></h4></li>
-                <li class="list-group-item">You can use the toolbar to scroll through a certain category, or search for certain keywords such as club category, features, or leadership.</li>
-                <li class="list-group-item"><center><h4>Want a suggestion?</h4></center></li>
-                <li class="list-group-item">Check out our Top 20 page to see Princeton's 20 highest-rated clubs.</li>
+                <li class="list-group-item"><center><h4>Confused where to start?</h4></center></li>
+                <li class="list-group-item">From the homepage, you can <b>search</b> for any Princeton extracurricular club. On each <b>club's page</b>, you can browse info related to the club, read other students' reviews of the club, or read past interview experiences. If you're a club leader, you can <b>customize and edit</b> your club's page from the <b>"My Clubs"</b> tab (or from your club's page directly).</li>
+                <li class="list-group-item"><center><h4>Don't see your club?</h4></center></li>
+                <li class="list-group-item">Club Talk currently only features all ODUS-recognized clubs (per their website). If you want your club to be added, email princetonclubtalk@gmail.com.</li>
+                <li class="list-group-item"><center><h4>Questions or comments?<h4></h4></li>
+                <li class="list-group-item">We love feedback! If you found a bug or would like a new feature to be added, please email djmajor@princeton.edu.</li>
               </ul>
             </div>
             <div class="modal-footer">
@@ -99,7 +99,7 @@
                   &nbsp;&nbsp;&nbsp;
                   <div class="input-group-prepend">
                     <select class="custom-select" id="type" name="type">
-                        <option selected value="%">All clubs</option>
+                      <option selected value="%">All clubs</option>
                       <option value="17">A Cappella</option>
                       <option value="5">Academic</option>
                       <option value="6">Career Opportunity</option>
@@ -121,9 +121,9 @@
                     </select>
                   </div>
                   <input type="text" name = "q" class="form-control" aria-label="Text input with dropdown button">
-                      <div class="input-group-append">
+                    <div class="input-group-append">
                       <button class="btn btn-outline-dark" type="submit" value = search>Search</button>
-                  </div>
+                    </div>
                   &nbsp;&nbsp;&nbsp;
                 </div>
               </form>
