--- a/page/static/css/homepage.css
+++ b/page/static/css/homepage.css
@@ -90,10 +90,28 @@ body {
 
 }
 
+.panelT.panel-default-2 {
+  border-radius: 5px !important;
+
+}
+
+.panel-body {
+  padding: 8px 8px !important;
+}
+
 .btn-outline-secondary-1 {
   background: white;
 }
 
+.py-5.bg-dark.bg-grey {
+  background-color: #f2f2f2 !important;
+}
+.py-5.bg-dark.orange {
+  padding-top: 20px !important;
+  padding-bottom: 20px !important;
+  background-color: orange !important;
+  border-radius: 0px !important;
+}
 
 #imaginary_container{
     margin-top:20%; /* Don't copy this */
