--- a/page/templates/page/splash-page.html
+++ b/page/templates/page/splash-page.html
@@ -40,12 +40,12 @@
               
               <ul class="list-group list-group-flush">
                 <li class="list-group-item"></li>
-                <li class="list-group-item"><center><h4>Find a club</h4></center></li>
-                <li class="list-group-item">Use the search bar below to find any of Princeton's 300+ clubs!</li>
-                <li class="list-group-item"><center><h4>Not sure what you're looking for?<h4></h4></li>
-                <li class="list-group-item">You can use the toolbar to scroll through a certain category, or search for certain keywords such as club category, features, or leadership.</li>
-                <li class="list-group-item"><center><h4>Want a suggestion?</h4></center></li>
-                <li class="list-group-item">Check out our Top 20 page to see Princeton's 20 highest-rated clubs.</li>
+                <li class="list-group-item"><center><h4>Confused where to start?</h4></center></li>
+                <li class="list-group-item">From the homepage, you can <b>search</b> for any Princeton extracurricular club. On each <b>club's page</b>, you can browse info related to the club, read other students' reviews of the club, or read past interview experiences. If you're a club leader, you can <b>customize and edit</b> your club's page from the <b>"My Clubs"</b> tab (or from your club's page directly).</li>
+                <li class="list-group-item"><center><h4>Don't see your club?</h4></center></li>
+                <li class="list-group-item">Club Talk currently only features all ODUS-recognized clubs (per their website). If you want your club to be added, email princetonclubtalk@gmail.com.</li>
+                <li class="list-group-item"><center><h4>Questions or comments?<h4></h4></li>
+                <li class="list-group-item">We love feedback! If you found a bug or would like a new feature to be added, please email djmajor@princeton.edu.</li>
               </ul>
             </div>
             <div class="modal-footer">
@@ -163,19 +163,95 @@
           </div>
         </div>
       </div>  
-      <div class="container">
-        <div class="row">
+      <br>
+      <br>
+      <footer class="py-5 bg-dark bg-grey">
+        <br>
+        <div class="container">
+          <div class="row">
+           
+            <div class="col-sm-12">
 
+              <div class="row">
+                <div class="col-sm-3">
+                  <div class="panelT panel-default-2">
+                    <div class="panel-body-top">
+                      <footer class="py-5 bg-dark orange">
+                        <center><i class="fas fa-search-plus fa-3x"></i></center>
+                      </footer>
+                    </div>
+                    <div class="panel-body">
+                      <br>
+                      <center>
+                        <strong>Search</strong>
+                        <p>Search for clubs using the search bar above, or scroll through the "All Clubs" list.</p>
+                      </center>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-3">
+                  <div class="panelT panel-default-2">
+                    <div class="panel-body-top">
+                      <footer class="py-5 bg-dark orange">
+                        <center><i class="far fa-comments fa-3x"></i></center>
+                      </footer>
+                    </div>
+                    <div class="panel-body">
+                      <br>
+                      <center>
+                        <strong>Reviews</strong>
+                        <p>Leave anonymous reviews of clubs and describe past interview experiences.</p>
+                      </center>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-3">
+                  <div class="panelT panel-default-2">
+                    <div class="panel-body-top">
+                      <footer class="py-5 bg-dark orange">
+                        <center><i class="fas fa-plus-circle fa-3x"></i></center>
+                      </footer>
+                    </div>
+                    <div class="panel-body">
+                      <br>
+                      <center>
+                        <strong>Customize</strong>
+                        <p>Customize your clubs and attract new members by going to "my clubs" and clicking <i class="fas fa-plus-circle"></i></p>
+                      </center>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-3">
+                  <div class="panelT panel-default-2">
+                    <div class="panel-body-top">
+                      <footer class="py-5 bg-dark orange">
+                        <center><i class="fas fa-trophy fa-3x"></i></center>
+                      </footer>
+                    </div>
+                    <div class="panel-body">
+                      <br>
+                      <center>
+                        <strong>Top 20</strong>
+                        <p>Click "Top 20" above to see the 20 highest-rated clubs on Club Talk.</p>
+                      </center>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          
+
+          </div>
         </div>
-      </div>
-      <br>
-      <br>
-      <br>
+        <br>
+        <br>
+      <!-- /.container -->
+      </footer>
       <footer class="py-5 bg-dark">
       <div class="container">
         <br>
         <h4 class="m-0 text-center text-white">"What enables the wise ... [to] achieve things beyond the reach of ordinary men is FOREKNOWLEDGE." - <a href="https://en.wikipedia.org/wiki/The_Art_of_War">Sun Tzu</a></h4>
-        <br>
         <br>
       </div>
       <!-- /.container -->
