--- a/page/templates/page/splash-page.html
+++ b/page/templates/page/splash-page.html
@@ -89,7 +89,7 @@
               </div>
             </div>
         </nav>
-
+      <div class ="top3">
       <div class="container">
         <br>
         <br>
@@ -161,82 +161,74 @@
           </div>
         </div>
       </div>  
+      </div>
       <footer class="py-5 bg-dark bg-grey">
         <div class="container">
           <div class="row">
-           
-            <div class="col-sm-12">
-
-              <div class="row">
-                <div class="col-sm-3">
-                  <div class="panelT panel-default-2">
-                    <div class="panel-body-top">
-                      <footer class="py-5 bg-dark orange">
-                        <center><i class="fas fa-search-plus fa-3x"></i></center>
-                      </footer>
-                    </div>
-                    <div class="panel-body">
-                      <br>
-                      <center>
-                        <strong>Search</strong>
-                        <p>Search for clubs using the search bar above, or scroll through the "All Clubs" list.</p>
-                      </center>
-                    </div>
-                  </div>
+            <div class="col-sm-3">
+              <div class="panelT panel-default-2">
+                <div class="panel-body-top">
+                  <footer class="py-5 bg-dark orange">
+                    <center><i class="fas fa-search-plus fa-2x"></i></center>
+                  </footer>
                 </div>
-                <div class="col-sm-3">
-                  <div class="panelT panel-default-2">
-                    <div class="panel-body-top">
-                      <footer class="py-5 bg-dark orange">
-                        <center><i class="far fa-comments fa-3x"></i></center>
-                      </footer>
-                    </div>
-                    <div class="panel-body">
-                      <br>
-                      <center>
-                        <strong>Reviews</strong>
-                        <p>Leave anonymous reviews of clubs and describe past interview experiences.</p>
-                      </center>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="panelT panel-default-2">
-                    <div class="panel-body-top">
-                      <footer class="py-5 bg-dark orange">
-                        <center><i class="fas fa-plus-circle fa-3x"></i></center>
-                      </footer>
-                    </div>
-                    <div class="panel-body">
-                      <br>
-                      <center>
-                        <strong>Customize</strong>
-                        <p>Customize your clubs and attract new members by going to "my clubs" and clicking <i class="fas fa-plus-circle"></i></p>
-                      </center>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="panelT panel-default-2">
-                    <div class="panel-body-top">
-                      <footer class="py-5 bg-dark orange">
-                        <center><i class="fas fa-trophy fa-3x"></i></center>
-                      </footer>
-                    </div>
-                    <div class="panel-body">
-                      <br>
-                      <center>
-                        <strong>Top 20</strong>
-                        <p>Click "Top 20" above to see the 20 highest-rated clubs on Club Talk.</p>
-                      </center>
-                    </div>
-                  </div>
+                <div class="panel-body">
+                  <br>
+                  <center>
+                    <strong>Search</strong>
+                    <p>Search for clubs using the search bar above, or scroll through the "All Clubs" list.</p>
+                  </center>
                 </div>
               </div>
-
             </div>
-          
-
+            <div class="col-sm-3">
+              <div class="panelT panel-default-2">
+                <div class="panel-body-top">
+                  <footer class="py-5 bg-dark orange">
+                    <center><i class="far fa-comments fa-2x"></i></center>
+                  </footer>
+                </div>
+                <div class="panel-body">
+                  <br>
+                  <center>
+                    <strong>Reviews</strong>
+                    <p>Leave anonymous reviews of clubs and describe past interview experiences.</p>
+                  </center>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="panelT panel-default-2">
+                <div class="panel-body-top">
+                  <footer class="py-5 bg-dark orange">
+                    <center><i class="fas fa-plus-circle fa-2x"></i></center>
+                  </footer>
+                </div>
+                <div class="panel-body">
+                  <br>
+                  <center>
+                    <strong>Customize</strong>
+                    <p>Customize your clubs and attract new members by going to "my clubs" and clicking <i class="fas fa-plus-circle"></i></p>
+                  </center>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="panelT panel-default-2">
+                <div class="panel-body-top">
+                  <footer class="py-5 bg-dark orange">
+                    <center><i class="fas fa-trophy fa-2x"></i></center>
+                  </footer>
+                </div>
+                <div class="panel-body">
+                  <br>
+                  <center>
+                    <strong>Top 20</strong>
+                    <p>Click "Top 20" above to see the 20 highest-rated clubs on Club Talk.</p>
+                  </center>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <br>
